cmake_minimum_required(VERSION 3.26)
set(CMAKE_BUILD_TYPE Release)
set(CXX_STANDARD 23)
project(pisum)
add_executable(pisum src/pisum.cpp)
add_library(picalc src/picalc.cpp src/benchmark.cpp)
target_include_directories(picalc PUBLIC include)
find_package(fmt)
target_link_libraries(pisum picalc)
target_link_libraries(picalc fmt::fmt)
